<resources>
    <string name="app_name">수지</string>
    <!--Menu-->
    <string name="create_menu">메뉴 만들기</string>
    <string name="create">만들기</string>
    <string name="cancel">취소</string>
    <string name="menu">메뉴</string>
    <string name="barley_rice">보리밥</string>
    <string name="name">이름</string>
    <string name="price">가격</string>
    <string name="sub_menu">부가 메뉴</string>
    <string name="sub_name">부가 메뉴 이름</string>
    <string name="sub_price">부가 메뉴 가격</string>
    <string name="modify">수정</string>
    <string name="delete">삭제</string>
    <string name="sell">판매</string>
    <string name="count">수량</string>
    <string name="create_food">메뉴 만들기</string>
    <string name="total_price">총 금액</string>
    <string name="sell_item">%1$s %2$s : %3$d개</string>
    <string name="no_sales">판매중인 물품이 없습니다.\n수정 버튼을 눌러 추가하거나\n취소 버튼을 눌러 제거하세요!</string>
    <string name="pay_cash">현금 계산</string>
    <string name="pay_card">카드 계산</string>
    <string name="sell_food">음식 판매</string>
    <string name="day">일간</string>
    <string name="week">주간</string>
    <string name="month">월간</string>
    <string name="all">전체</string>
</resources>
