<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="day" type="com.suji.android.suji_android.listener.ItemClickListener"/>
        <variable name="week" type="com.suji.android.suji_android.listener.ItemClickListener"/>
        <variable name="month" type="com.suji.android.suji_android.listener.ItemClickListener"/>
        <variable name="all" type="com.suji.android.suji_android.listener.ItemClickListener"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintStart_toEndOf="@+id/account_week_btn"
            app:layout_constraintEnd_toEndOf="@+id/account_week_btn">

        <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/account_day_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:onClick="@{() -> day.onClick(null)}"
                app:bootstrapBrand="primary"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintEnd_toStartOf="@id/account_week_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/account_week_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/week"
                android:onClick="@{() -> week.onClick(null)}"
                app:bootstrapBrand="success"
                app:layout_constraintStart_toEndOf="@id/account_day_btn"
                app:layout_constraintEnd_toStartOf="@id/account_month_btn"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintTop_toTopOf="parent"/>
        <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/account_month_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:onClick="@{() -> month.onClick(null)}"
                app:bootstrapBrand="info"
                app:layout_constraintStart_toEndOf="@id/account_week_btn"
                app:layout_constraintEnd_toStartOf="@id/account_all_btn"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintTop_toTopOf="parent"/>
        <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/account_all_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:onClick="@{() -> all.onClick(null)}"
                app:bootstrapBrand="regular"
                app:layout_constraintStart_toEndOf="@id/account_month_btn"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/account_pay_card_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="25sp"
                android:text="@string/pay_card"
                app:layout_constraintTop_toBottomOf="@id/account_day_btn"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:id="@+id/food_sold_card_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="25sp"
                android:textColor="#000000"
                app:layout_constraintTop_toBottomOf="@id/account_day_btn"/>
        <TextView
                android:id="@+id/account_pay_cash_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="25sp"
                android:text="@string/pay_cash"
                app:layout_constraintTop_toBottomOf="@id/account_pay_card_text"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:id="@+id/food_sold_cash_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="25sp"
                android:textColor="#000000"
                app:layout_constraintTop_toBottomOf="@id/food_sold_card_price"/>

        <TextView
                android:id="@+id/account_all_pay_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="25sp"
                android:text="@string/total_price"
                app:layout_constraintTop_toBottomOf="@id/account_pay_cash_text"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:id="@+id/food_sold_total_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="25sp"
                android:textColor="#000000"
                app:layout_constraintTop_toBottomOf="@id/food_sold_cash_price"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sold_fragment_items"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/account_all_pay_text"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>