<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.beardedhen.androidbootstrap.BootstrapLabel
            android:id="@+id/create_food_title"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/create_food"
            app:bootstrapBrand="success"
            app:bootstrapHeading="h1"
            app:layout_constraintTop_toTopOf="parent" />

    <com.beardedhen.androidbootstrap.BootstrapLabel
            android:id="@+id/create_menu_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/name"
            app:bootstrapBrand="primary"
            app:bootstrapHeading="h5"
            app:layout_constraintBottom_toTopOf="@id/create_menu_price"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/create_menu_edit_name"
            app:layout_constraintTop_toBottomOf="@id/create_food_title"
            app:layout_constraintVertical_chainStyle="packed"
            app:roundedCorners="true" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/create_menu_edit_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            app:bootstrapBrand="info"
            app:bootstrapSize="md"
            app:layout_constraintBottom_toTopOf="@id/create_menu_edit_price"
            app:layout_constraintLeft_toRightOf="@id/create_menu_name"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_food_title"
            app:layout_constraintVertical_chainStyle="packed" />

    <com.beardedhen.androidbootstrap.BootstrapLabel
            android:id="@+id/create_menu_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/price"
            app:bootstrapBrand="primary"
            app:bootstrapHeading="h5"
            app:layout_constraintBottom_toTopOf="@id/create_sub_menu"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/create_menu_edit_price"
            app:layout_constraintTop_toBottomOf="@id/create_menu_name"
            app:roundedCorners="true" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/create_menu_edit_price"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:inputType="number"
            app:bootstrapBrand="info"
            app:bootstrapSize="md"
            app:layout_constraintBottom_toTopOf="@id/create_sub_menu"
            app:layout_constraintLeft_toRightOf="@id/create_menu_price"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_menu_edit_name" />

    <LinearLayout
            android:id="@+id/create_sub_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_menu_price" />
</androidx.constraintlayout.widget.ConstraintLayout>